# pay-tick

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: strip-downloads.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Counter.tsx  SettingsPanel.tsx  ShareCard.tsx  Widget.tsx
src/lib/: format.ts  salary.ts  tauri.ts  types.ts  useLocalStorage.ts  useNow.ts
