[package]
name = "pay-tick"
version = "0.1.3"
description = "페이틱 - 실시간 월급 카운터 데스크톱 위젯"
authors = ["jin6877"]
edition = "2021"

[lib]
name = "pay_tick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
